[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quends"
version = "0.1.0"
description = "A Python package for quantifying uncertainty in ensembles of data streams."
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.7"

dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "netcdf4>=1.7",
    "statsmodels>=0.13",
    "scikit-learn>=1.6",
    "matplotlib>=3.10"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0"
]

[project.scripts]
quends = "quends.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}