[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quends"
version = "0.1.0"
description = "A Python package for quantifying uncertainty in ensembles of data streams."
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.7"

dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "netcdf4>=1.7",
    "statsmodels>=0.13",
    "scikit-learn>=1.0",
    "matplotlib>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pre-commit>=2.17.0",
    "black>=25.1.0",
    "ruff>=0.11.0",
    "isort>=5.12.0"
]

[project.scripts]
quends = "quends.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}